--- a/pages/lance.html
+++ b/pages/lance.html
@@ -59,11 +59,15 @@ permalink: /lance.html
     <em>1877-1964</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a></p>
     <br>
-    <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. This work led to Lance being hired as the art director for Weaver Productions, who were attempting to challenge Hollywood cinematic strongholds. After the company folded, Lance would become partners with Ambrose J. Russell in 1930 and then Irwin E Muri and John E. McGuire in 1936. This was all achieved without Lance ever attaining a formal architectural degree.</p>
+    <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. 
+      After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. 
+      This work led to Lance being hired as the art director for Weaver Productions, who were attempting to challenge Hollywood cinematic strongholds. 
+      After the company folded, Lance would become partners with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> in 1930, then Irwin E Muri and John E. McGuire in 1936. 
+      This was all achieved without Lance ever attaining a formal architectural degree.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work:</strong> 
     <br>  
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a> 
     <br>
@@ -90,7 +94,9 @@ permalink: /lance.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
-    <sub>Mottau Building, Historic Property Inventory Forms (BU-3659), 06-30-1993
+    <sub>Mottau Building
+    <br>   
+    Historic Property Inventory Forms (BU-3659), 06-30-1993
     <br>  
     Courtesy Northwest Room</sub>
   </div>
