--- a/pages/mallis.html
+++ b/pages/mallis.html
@@ -59,11 +59,13 @@ permalink: /mallis.html
     <em>1883-1954</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049">Dupont School Building Addition</a></p>
+    <p><strong>Lost Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/item.html?id=lt049">Dupont School Building Addition</a></p>
     <br>
-    <p>William Mallis was born in Auchterarder, Scotland and received architectural training during a four year apprenticeship in Perth, Scotland. After working under John H. Felt, one of the most prolific school designers in Kansas, Mallis moved to Seattle in 1918 and worked as a structural draftsman for the Pacific Coast Company. From that point, Mallis worked independently as well as a partner with Joseph H.D. DeHart on a wide variety of public institutional buildings across Washington State.</p>
+    <p>William Mallis was born in Auchterarder, Scotland and received architectural training during a four year apprenticeship in Perth, Scotland. 
+      After working under John H. Felt, one of the most prolific school designers in Kansas, Mallis moved to Seattle in 1918 and worked as a structural draftsman for the Pacific Coast Company. 
+      From that point, Mallis worked independently as well as a partner with Joseph H.D. DeHart on a wide variety of public institutional buildings across Washington State.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>
     <a href="https://digitalcollections.lib.washington.edu/digital/collection/imlswrvm/id/44/rec/15">Thomas Grade School</a>
     <br>
