--- a/pages/mock.html
+++ b/pages/mock.html
@@ -59,7 +59,7 @@ permalink: /mock.html
     <em>1886-1950</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>    
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a>
     <br>    
@@ -67,9 +67,13 @@ permalink: /mock.html
     <br>    
     <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA">Talmud Torah Synagogue</a></p>
     <br>
-    <p>Ernest Thornton Mock is one of the few other architects in this collection that were born in Tacoma. Mock apprenticed for twelve years under Bullard & Russell before partnering with Irwin H. Hill and Jack Griffin in 1918. When Griffin left to pursue contracts in Lewis County, he was replaced by Nelson J. Morrison and shared a space in the Perkins Building. Mock's death in 1950 inspired the 88th annual reunion of the Scottish Rite Masons in Tacoma, to honor his 25 years of service. </p>
+    <p>Ernest Thornton Mock is one of the few other architects in this collection that were born in Tacoma. 
+      Mock apprenticed for twelve years under Bullard & <a href="https://aweymo.github.io/losttacoma/russell.html">Russell</a> before partnering with <a href="https://aweymo.github.io/losttacoma/hill.html">Hill</a> and 
+      <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a> in 1918. 
+      When Griffin left to pursue contracts in Lewis County, he was replaced by Nelson J. Morrison and shared a space in the Perkins Building. 
+      Mock's death in 1950 inspired the 88th annual reunion of the Scottish Rite Masons in Tacoma, to honor his 25 years of service. </p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/847/rec/30">Fire Station No. 12</a> 
     <br>
