--- a/pages/russell.html
+++ b/pages/russell.html
@@ -59,7 +59,7 @@ permalink: /russell.html
     <em>1857-1938</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>Lost Tacoma Locations: 
     <br>    
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA">Mottau Building</a>
     <br>
@@ -67,7 +67,10 @@ permalink: /russell.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a></p>
     <br>
-    <p>Ambrose James (sometimes Janvier) Russell was born in Trivandrum, India to a Scottish missionary and an English mother who died early in his life. Russell studied at the University of Glasgow and the Ecole des Beaux Arts before coming to America in 1884. In 1895, Russell was the Director of the Watercolor Sketch Club, which displayed work at the Ferry Museum (now the Washington State Historical Society) and curated work from future partner Everett Phipps Babcock. In 1896, Russell was appointed as a professor of architecture at the University of Washington in Seattle.</p>
+    <p>Ambrose James (sometimes Janvier) Russell was born in Trivandrum, India to a Scottish missionary and an English mother who died early in his life. 
+      Russell studied at the University of Glasgow and the Ecole des Beaux Arts before coming to America in 1884. 
+      In 1895, Russell was the Director of the Watercolor Sketch Club, which displayed work at the Ferry Museum (now the Washington State Historical Society) and curated work from future partner <a href="https://aweymo.github.io/losttacoma/babcock.html">Everett Phipps Babcock</a>. 
+      In 1896, Russell was appointed as a professor of architecture at the University of Washington in Seattle.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -77,9 +80,12 @@ permalink: /russell.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Russell formed partnerships with Albert Walter Spaulding and Frederick Henry Heath in 1901, Everett Phipps Babcock in 1905, H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally Gaston Lance, A. Gordon Lumm and Irwin Muri in 1930. Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his pallbearers were architects featured in this collection: Gaston Lance, Ernest Mock and Earl N. Dugan.</p>
+    <p>Russell formed partnerships with Albert Walter Spaulding and <a href="https://aweymo.github.io/losttacoma/heath.html">Frederick Henry Heath</a> in 1901, <a href="https://aweymo.github.io/losttacoma/babcock.html">Everett Phipps Babcock</a> in 1905, 
+      H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally <a href="https://aweymo.github.io/losttacoma/lance.html">Gaston C. Lance</a>, A. Gordon Lumm and Irwin Muri in 1930. 
+      Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his pallbearers were architects featured in this collection: 
+      Gaston Lance, <a href="https://aweymo.github.io/losttacoma/mock.html">Ernest Mock</a>  and <a href="https://aweymo.github.io/losttacoma/dugan.html">Earl N. Dugan</a>.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a> 
+    <p><strong>Other Work:</strong> <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a> 
         <br>
         <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/30267/rec/26">Rhodes Department Store</a> 
         <br>
@@ -91,7 +97,9 @@ permalink: /russell.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
-    <sub>Mottau Building, Historic Property Inventory Forms (BU-3659), 06-30-1993
+    <sub>Mottau Building
+    <br>  
+    Historic Property Inventory Forms (BU-3659), 06-30-1993
     <br>  
     Courtesy Northwest Room</sub>
   </div>
@@ -101,14 +109,18 @@ permalink: /russell.html
     <div class="column left" style="background-color:#FFFFFF;">
         <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
         <br>
-        <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
+        <sub>Pacific Savings and Loan
+        <br>  
+        TPL Historic Building Files (BU-11000), 11-04-1928
         <br>
         Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pavilion_02" alt="Point Defiance Pavilion" style="max-width:100%;"></a>
       <br>
-      <sub>Point Defiance Pavilion, Richards Studio (D34612-73), ca. 1934, 
+      <sub>Point Defiance Pavilion
+      <br>  
+      Richards Studio (D34612-73), ca. 1934
       <br>
       Courtesy Northwest Room</sub>
     </div>
