--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -59,7 +59,7 @@ permalink: /sutton.html
     <em>1867-1923</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
     <br>
@@ -69,7 +69,11 @@ permalink: /sutton.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
     <br>
-    <p>Albert Sutton was born in Victoria, British Columbia, raised in Portland, Oregon and graduated from the University of California in Berkeley. His first architectural partnership was with James Pickles in 1888, followed by a brief collaboration with Ambrose Russell which lasted only two years when Sutton relocated to San Francisco. When he returned to Tacoma, Sutton formed a partnership with Harrison A. Whitney and Earl Dugan in 1912. This partnership would last until 1923 when Sutton would die suddenly from heart failure. Albert Sutton was a 33rd degree Mason, the highest rank within the organization.</p>
+    <p>Albert Sutton was born in Victoria, British Columbia, raised in Portland, Oregon and graduated from the University of California in Berkeley. 
+      His first architectural partnership was with James Pickles in 1888, followed by a brief collaboration with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> which lasted only two years when Sutton relocated to San Francisco. 
+      When he returned to Tacoma, Sutton formed a partnership with <a href="https://aweymo.github.io/losttacoma/whitney.html">Harrison A. Whitney</a> and <a href="https://aweymo.github.io/losttacoma/dugan.html">Earl N. Dugan</a> in 1912. 
+      This partnership would last until 1923 when Sutton would die suddenly from heart failure. 
+      Albert Sutton was a 33rd degree Mason, the highest rank within the organization.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -79,7 +83,7 @@ permalink: /sutton.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Other Work: 
+    <p><strong>Other Work:</strong>
         <br>    
         <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/3986/rec/2">Jonathan Smith Building</a> 
         <br>
@@ -93,7 +97,9 @@ permalink: /sutton.html
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
     <br>
-    <sub>Donnelly Hotel Site, TPL Historic Building Files (BU-11892), 1938-04-24, 
+    <sub>Donnelly Hotel Site
+    <br>  
+    TPL Historic Building Files (BU-11892), 1938-04-24
     <br>
     Courtesy Northwest Room</sub>
   </div>
@@ -103,14 +109,18 @@ permalink: /sutton.html
     <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Remodel" style="max-width:100%;"></a>
     <br>
-    <sub>Lawrence Block Remodel, TPL Historic Building Files (BU-12730), c.a. 1934
+    <sub>Lawrence Block Remodel
+    <br>  
+    TPL Historic Building Files (BU-12730), c.a. 1934
     <br>
     Courtesy Northwest Room</sub>
     </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/browse.html#934-36%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_waist" alt="New York Waist House" style="max-width:100%;"></a>
       <br>
-      <sub>New York Waist House, TPL Historic Building Files (BU-12524), 05-04-1927
+      <sub>New York Waist House
+      <br>  
+      TPL Historic Building Files (BU-12524), 05-04-1927
       <br>
       Courtesy Northwest Room</sub>
     </div>
