--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -59,7 +59,7 @@ permalink: /whitney.html
     <em>1877-1956</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: 
+    <p><strong>Lost Tacoma Locations: </strong>
     <br>  
     <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA">Lawrence Block Remodel</a>
     <br>
@@ -67,9 +67,12 @@ permalink: /whitney.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/item.html?id=lt100">Scandinavian American Bank Hotel</a></p>
     <br>
-    <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. This position led to Whitney contributing designs for the Lewis and Clark Exposition and the Multnomah County Courthouse. In 1912, Whitney partnered with Albert Sutton and would retain Sutton's name in his architectural firm long after his death in 1923.</p>
+    <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. 
+      After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. 
+      This position led to Whitney contributing designs for the Lewis and Clark Exposition and the Multnomah County Courthouse. 
+      In 1912, Whitney partnered with <a href="https://aweymo.github.io/losttacoma/sutton.html">Albert Sutton</a> and would retain Sutton's name in his architectural firm long after his death in 1923.</p>
     <br>
-    <p>Other Work: 
+    <p><strong>Other Work: </strong>
     <br>  
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20483/rec/10">Annie Wright Seminary</a>
     <br>
@@ -93,7 +96,7 @@ permalink: /whitney.html
   <div class="column left" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04%20PACIFIC%20AVE%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_sabh.jpeg" alt="Scandinavian American Bank Hotel under construction" style="max-width:100%;"></a>
       <br>
-      <sub>Scandinavian American Bank Hotel under construction
+      <sub>Scandinavian American Bank Hotel, under construction
       <br>  
       Photo by Richards Studio (D8652-33), 1920-03-31
       <br>  
