--- a/pages/hawthorne.html
+++ b/pages/hawthorne.html
@@ -75,7 +75,7 @@ permalink: /hawthorne.html
     <br>
     <sub>Hawthorne School
       <br>  
-    TPL Historic Building Files (BU-10009)
+    TPL Historic Building Files (<a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36092/rec/8">BU-10009</a>)
     <br>  
     Courtesy Northwest Room</sub>
     </div>
