--- a/pages/hill.html
+++ b/pages/hill.html
@@ -67,7 +67,10 @@ permalink: /hill.html
     <br>    
     <a href="https://aweymo.github.io/losttacoma/browse.html#901 S 4TH ST, TACOMA">Talmud Torah Synagogue</a></p>
     <br>
-    <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then Hill, Mock & Griffin and finally Mock & Morrison. Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
+    <p>Irwin (sometimes Irwyn) Horatio Hill was born in Illinois and graduated from the University of Illinois and Chicago Art Institute. 
+      After moving to Tacoma in 1903, Hill partnered with George Bullard, then Woodroofe and Griffin, then <a href="https://aweymo.github.io/losttacoma/hill.html">Hill,</a> <a href="https://aweymo.github.io/losttacoma/mock.html">Mock</a> 
+      & <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a>  and finally Mock & Morrison.
+       Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
     <br>
     <p><strong>Other Work:</strong> <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
     <br>
