--- a/pages/hill.html
+++ b/pages/hill.html
@@ -72,7 +72,9 @@ permalink: /hill.html
       & <a href="https://aweymo.github.io/losttacoma/griffin.html">Griffin</a>  and finally Mock & Morrison.
        Hill was a member of the Tacoma Park Board and the Tacoma Rotary Club.</p>
     <br>
-    <p><strong>Other Work:</strong> <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
+    <p><strong>Other Work:</strong> 
+    <br>  
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/33568/rec/1">Ernest C. and Hattie M. Richards house</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/23337/rec/13">Pierce County Hospital</a> 
     <br>
