--- a/pages/lance.html
+++ b/pages/lance.html
@@ -63,7 +63,8 @@ permalink: /lance.html
     <br>
     <p>Gaston C. Lance was born in Bucharest, Romania to French parents in 1877 before being orphaned at the age of twelve. 
       After traveling and working a number of vocational jobs, Lance settled in Seattle in 1906, where worked for the Morrell Artistic Foundry and opened up his own ship design and carpentry shop. 
-      This work led to Lance being hired as the art director for Weaver Productions, who were attempting to challenge Hollywood cinematic strongholds. 
+      This work led to Lance being hired as the art director for <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/21232/rec/2">Weaver Productions</a>, 
+      who were attempting to challenge Hollywood cinematic strongholds. 
       After the company folded, Lance would become partners with <a href="https://aweymo.github.io/losttacoma/russell.html">Ambrose J. Russell</a> in 1930, then Irwin E Muri and John E. McGuire in 1936. 
       This was all achieved without Lance ever attaining a formal architectural degree.</p>
     <br>
