--- a/pages/heath.html
+++ b/pages/heath.html
@@ -70,20 +70,26 @@ permalink: /heath.html
       It was during this partnership that Heath would become the School Architect for the Tacoma School District from 1903 through 1920, when he had moved on to partner with <a href="https://aweymo.github.io/losttacoma/gove.html">George Gove</a> 
       and draftsman Herbert A. Bell as Heath, Gove & Bell. 
       Towards the end of his life, Heath collaborated with his son Frederick Jr. to help promote and sell his invention, "Heath Cubes," a square, hollow tile building material.</p>
-    <br>
-    <p><strong>Other Work: </strong>
-    <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a> 
-    <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9603/rec/3">First Church of Christ, Scientist</a>
-    <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/5834/rec/5">Stadium High School</a> </p>
-    <br>
-    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Frederick H. Heath.”, “PCAD - Frederick Henry Heath.”, “Peering at the Past: County High Schools Were Private, Parochial before Public.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 15, 1931 - Page 6,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 4, 1953 - Page 1,”</sub>
-    <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Frederick%20Henry%20Heath"><img src="https://aweymo.github.io/losttacoma/objects/p_heath.png" alt="Frederick Henry Heath" style="max-width:100%;object-fit: contain;"></a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column left" style="background-color:#FFFFFF;">
+    <p><strong>Other Work: </strong>
+      <br>
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a> 
+      <br>
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9603/rec/3">First Church of Christ, Scientist</a>
+      <br>
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/5834/rec/5">Stadium High School</a> </p>
+  </div>
+  <div class="column right" style="background-color:#FFFFFF;">
+    <br>
+    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Frederick H. Heath.”, “PCAD - Frederick Henry Heath.”, “Peering at the Past: County High Schools Were Private, Parochial before Public.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 15, 1931 - Page 6,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 4, 1953 - Page 1,”</sub>
+    <br>
   </div>
 </div>
       
