--- a/pages/heath.html
+++ b/pages/heath.html
@@ -77,7 +77,7 @@ permalink: /heath.html
 </div>
 
 <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;max-height:200px;">
     <p><strong>Other Work: </strong>
       <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/785/rec/2">Nereides Baths</a> 
@@ -86,7 +86,7 @@ permalink: /heath.html
       <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll18/id/5834/rec/5">Stadium High School</a> </p>
   </div>
-  <div class="column right" style="background-color:#FFFFFF;">
+  <div class="column right" style="background-color:#FFFFFF;max-height:200px;">
     <br>
     <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Frederick H. Heath.”, “PCAD - Frederick Henry Heath.”, “Peering at the Past: County High Schools Were Private, Parochial before Public.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - April 15, 1931 - Page 6,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 4, 1953 - Page 1,”</sub>
     <br>
