--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -54,7 +54,7 @@ permalink: /dugan.html
 <body>
 
 <div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
+  <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
     <h4><p><b>Earl N. Dugan</b></p></h4>
     <br>
     <em>1877-1956</em>
@@ -78,7 +78,7 @@ permalink: /dugan.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=dugan"><img src="https://aweymo.github.io/losttacoma/objects/p_dugan.jpeg" alt="Earl N. Dugan" style="max-width:60%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=dugan"><img src="https://aweymo.github.io/losttacoma/objects/p_dugan.jpeg" alt="Earl N. Dugan" style="max-width:60%;max-height:700px;"></a>
   </div>
 </div>
       
