--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -67,7 +67,7 @@ permalink: /abattoir.html
       <p>The company also designed plans for the Frye & Co. plant in Seattle and Oscar Mayer in Iowa City. The Carsten Packing Company had been active since 1897. In 1954, the company was sold to an Eastern firm and renamed to the Hi-Grade Packing Co. In 1990, executives in Seattle closed the Tacoma processing plant and on October 24, 1996 the structure was destroyed by fire.</p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1623%20E%20J%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
     <br>
     <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977</sub>
     <br> 
