--- a/pages/ch.html
+++ b/pages/ch.html
@@ -74,7 +74,7 @@ permalink: /ch.html
       <br>
     </div>
     <div class="column left" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/ekvall.html"><img src="https://aweymo.github.io/losttacoma/objects/b_davisson.jpeg" 
+      <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_davisson.jpeg" 
         alt="Ira L. Davisson, seated, Utilities Commissioner and Acting Mayor during the illness of Mayor Siegle, helps the Young Men's Business Club boost Tacoma by purchasing poster stamps of Tacoma and nearby scenes." style="max-width:100%;"></a>
       <br>
       <sub>Ira L. Davisson (seated)</sub>
