--- a/pages/comfort.html
+++ b/pages/comfort.html
@@ -62,7 +62,7 @@ permalink: /comfort.html
       <br>
       Address: <a href="https://aweymo.github.io/losttacoma/browse.html#625%20COMMERCE%20ST%2C%20TACOMA">625 COMMERCE ST, TACOMA</a></p>
       <br>
-      <p>Three of eight technical drawings for a proposed but unbuilt Comfort Station for Women, created by <a href="https://aweymo.github.io/losttacoma/raleigh.html">Wilbur C. RaleighA</a> on October, 1910. 
+      <p>Three of eight technical drawings for a proposed but unbuilt Comfort Station for Women, created by <a href="https://aweymo.github.io/losttacoma/raleigh.html">Wilbur C. Raleigh</a> on October, 1910. 
       The design places the restroom on the south 7th street side of the Old City Hall building, with a small, covered doorway leading underground to the facilities. 
       Wilbur C. Raleigh also designed the Shops and Stables building and acted as supervising engineer for the construction of the Murray Morgan and Puyallup River Bridges.</p>
       <br>
@@ -76,12 +76,12 @@ permalink: /comfort.html
       <br> </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1"><img src="https://aweymo.github.io/losttacoma/objects/b_comfort.jpeg" 
+      <a href="https://aweymo.github.io/losttacoma/browse.html#625%20COMMERCE%20ST%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_comfort.jpeg" 
         alt="The box-shaped structure in the middle of South 10th street (on the left) is the entrance to Tacoma's below-street-level Women Only comfort station." style="max-width:100%;"></a>
       <br>
       <sub>Detail of underground comfort station at 10th and Pacific which shares some similarities in design</sub>
       <br>
-      <sub>Photo by Marvin D. Boland (BOLAND-B10776), 1924-08-22</sub>
+      <sub>Photo by Marvin D. Boland <a href="https://tacomalibrary.contentdm.oclc.org/digital/collection/p17061coll21/id/12544/rec/1">(BOLAND-B10776)</a>, 1924-08-22</sub>
       <br>
       <sub>Courtesy Tacoma Public Library Northwest Room</sub>
       <br>
