--- a/pages/crystal.html
+++ b/pages/crystal.html
@@ -71,7 +71,7 @@ permalink: /crystal.html
       <br>
       <sub>Crystal Palace Public Market
       <br> 
-      TPL Historic Building Files (BU-12230)
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/18425/rec/1">(BU-10009)</a>
       <br>  
       Courtesy Tacoma Public Library Northwest Room</sub>
      </div>
@@ -81,7 +81,7 @@ permalink: /crystal.html
       <br>
       <sub>Fish Monger outside Crystal Palace Public Market
       <br>  
-      TPL Historic Building Files (BU-10009)
+      TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/32456/rec/1">(Boland-B12818)</a>
       <br> 
       Courtesy Tacoma Public Library Northwest Room</sub>
       <br>
