--- a/pages/donnelly.html
+++ b/pages/donnelly.html
@@ -68,7 +68,7 @@ permalink: /donnelly.html
       <br>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt048"><img src="https://aweymo.github.io/losttacoma/objects/ ext_donnelly" alt="Donnelly Site Hotel" style="max-width:100%;"></a>
       <br>
       <sub>Donnelly Hotel 
       <br>
