--- a/pages/edison.html
+++ b/pages/edison.html
@@ -53,7 +53,7 @@ permalink: /edison.html
 <body>
 
   <div class="row">
-    <div class="column left" style="background-color:#FFFFFF;">
+    <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
       <h4><p><b>Edison School Annex</b></p></h4>
       <br>
       <strong>Status: Demolished</strong>
@@ -65,8 +65,12 @@ permalink: /edison.html
       <p>One of 14 technical drawings for the Edison School Annex, created by <a href="https://aweymo.github.io/losttacoma/heath.html">Frederick Henry Heath</a> on March 28, 1910. 
       Renamed in 1912 to the Barlow Annex after South Tacoma community activist Orin Watts Barlow. The structure was demolished in 2011.</p>
       <br>
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Sheet 11</a> 
+        <br>
       </div>
-    <div class="column right" style="background-color:#FFFFFF;">
+    <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/ ext_edison" alt="Edison School Annex" style="max-width:100%;"></a>
       <br>
       <sub>Edison School
@@ -75,7 +79,7 @@ permalink: /edison.html
       <br>  
       Courtesy Northwest Room</sub>
     </div>
-    <div class="column left" style="background-color:#FFFFFF;">
+    <div class="column left" style="background-color:#FFFFFF;max-height:700px;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050"><img src="https://aweymo.github.io/losttacoma/objects/b_barlow.jpeg" alt="Orin Watts Barlow" style="max-width:100%;"></a>
       <br>
       <sub>Orin Watts Barlow
@@ -85,11 +89,7 @@ permalink: /edison.html
       San Francisco, Pacific Art Co., 1903.</sub>
       <br>
       </div>
-    <div class="column right" style="background-color:#FFFFFF;">
-      <p>Technical Drawings: 
-        <br>
-        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt050">Sheet 11</a> 
-        <br>
+    <div class="column right" style="background-color:#FFFFFF;max-height:700px;">
   </div>
     </div>
   </div>
