--- a/pages/mottau.html
+++ b/pages/mottau.html
@@ -72,7 +72,7 @@ permalink: /mottau.html
         </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 MARTIN LUTHER KING JR WAY, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt056"><img src="https://aweymo.github.io/losttacoma/objects/ ext_mottau" alt="Mottau Building" style="max-width:100%;"></a>
     <br>
     <sub>Mottau Building
     <br>   
