--- a/pages/pacific.html
+++ b/pages/pacific.html
@@ -80,7 +80,7 @@ permalink: /pacific.html
         </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#801 E WRIGHT AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_pacific.jpeg" alt="Pacific Refrigerating Company (then Alpine Cold Storage) on fire in 2003" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/browse.html#2501-15%20JEFFERSON%20AVE%2C%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/b_pacific.jpeg" alt="Pacific Refrigerating Company (then Alpine Cold Storage) on fire in 2003" style="max-width:100%;"></a>
       <br>
       <sub>Pacific Refrigerating Company (then Alpine Cold Storage) on fire in 2003 
       <br>  
