--- a/pages/psl.html
+++ b/pages/psl.html
@@ -82,7 +82,7 @@ permalink: /psl.html
         <br>
         <sub>Pacific Savings and Loan
         <br>  
-        TPL Historic Building Files (BU-11000), 11-04-1928
+        TPL Historic Building Files <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04%20PACIFIC%20AVE%2C%20TACOMA">(BU-11000)</a>, 11-04-1928
         <br>
         Courtesy Northwest Room</sub>
     </div>
