--- a/pages/lawrence.html
+++ b/pages/lawrence.html
@@ -73,11 +73,11 @@ permalink: /lawrence.html
         </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
-      <a href="https://aweymo.github.io/losttacoma/browse.html#1009-15 A ST, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Interior" style="max-width:100%;"></a>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt054"><img src="https://aweymo.github.io/losttacoma/objects/ ext_lawrence" alt="Lawrence Block Interior" style="max-width:100%;"></a>
     <br>
     <sub>Lawrence Block Interior
     <br>
-    TPL Historic Building Files (BU-12730), c.a. 1934
+    TPL Historic Building Files <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/7619/rec/1">(BU-12730)</a>, c.a. 1934
     <br>
     Courtesy Northwest Room</sub>
     </div>
