--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -121,7 +121,7 @@ permalink: /abattoir.html
       <br>
       <sub>Golden Jubilee Parade, Carsten's Packing Company float</sub>
       <br>
-      <sub>Photo by Richards Studio (D8652-33), 1939-07-22</sub>
+      <sub>Photo by Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/3068/rec/1">(D8652-33)</a>, 1939-07-22</sub>
       <br>
       <sub>Courtesy Tacoma Public Library Northwest Room</sub>
       <br>
