--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -56,7 +56,7 @@ permalink: /bachelor.html
   <div class="column left" style="background-color:#FFFFFF;">
     <h4><p><b>Arthur J. Bachelor</b></p></h4>
     <br>
-    <p><strong>Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA">Mission Theater</a></p>
+    <p><strong>Tacoma Locations:</strong> <a href="https://aweymo.github.io/losttacoma/mission.html">Mission Theater</a></p>
     <br>
     <p>The architect that drew up the plans for the Mission Theater in 1924 is unclear. 
     <br>
@@ -68,7 +68,7 @@ permalink: /bachelor.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#4801-05 YAKIMA AVE S, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/mission.html"><img src="https://aweymo.github.io/losttacoma/objects/p_bachelor.jpeg" alt="Arthur J. Bachelor" style="max-width:100%;"></a>
   <br>
   <br>
   </div>
