--- a/pages/sabh.html
+++ b/pages/sabh.html
@@ -78,7 +78,7 @@ permalink: /sabh.html
       <br>
       <sub>Scandinavian American Bank Hotel under construction
       <br>  
-      Photo by Richards Studio (D8652-33), 1920-03-31
+      Photo by Potter's Photo Shop <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/149086/rec/1">(BU-10892)</a>, 1920-03-31
       <br>  
      Courtesy Tacoma Public Library Northwest Room</sub>
     </div>
