--- a/pages/talmud.html
+++ b/pages/talmud.html
@@ -82,7 +82,7 @@ permalink: /talmud.html
       <br>
       <sub>Talmud Torah Synagogue 
       <br>   
-      Marvin D. Boland Collection (BOLAND-B18322), 04-08-1928
+      Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/29138/rec/1">(BOLAND-B18322)</a>, 04-08-1928
       <br> 
       Courtesy Northwest Room</sub>
       </div>
