--- a/pages/defiance.html
+++ b/pages/defiance.html
@@ -73,7 +73,7 @@ permalink: /defiance.html
     <br>
     <sub>Point Defiance Pavilion
     <br> 
-    Richards Studio (D34612-73), ca. 1934
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/26249/rec/1">(D7207-6)</a>, 04-24-1938 
     <br>
     Courtesy Northwest Room</sub>
     </div>
@@ -134,7 +134,7 @@ permalink: /defiance.html
     <br>
     <sub>Point Defiance Pavilion Overhead
     <br>  
-    Richards Studio (D7207-6), 04-24-1938 
+    Richards Studio <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/24136/rec/1">(D34612-73)</a>, c.a. 1934
     <br>
     Courtesy Northwest Room</sub>
     </div>
