--- a/pages/roosevelt.html
+++ b/pages/roosevelt.html
@@ -77,7 +77,7 @@ permalink: /roosevelt.html
       <br>
       <sub>Roosevelt School
       <br>  
-      Marvin D. Boland Collection (BOLAND-B17893), 12-01-1928
+      Marvin D. Boland Collection <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/2619/rec/4">(BOLAND-B17893)</a>, 12-01-1928
       <br>  
      Courtesy Northwest Room</sub>
     </div>
