--- a/pages/sperry.html
+++ b/pages/sperry.html
@@ -78,7 +78,7 @@ permalink: /sperry.html
      <br>
      <sub>Sperry Flour Company Elevator
      <br>
-     TPL Historic Building Files (BU-13919), c.a 1920
+     TPL Historic Building Files <a href="https://aweymo.github.io/losttacoma/browse.html#3%20SCHUSTER%20PARKWAY%2C%20TACOMA">(BU-13919)</a>, c.a 1920
      <br>
      Courtesy Northwest Room</sub>
      <br>
